--- a/TIC19/Properties/Resources.resx
+++ b/TIC19/Properties/Resources.resx
@@ -133,8 +133,20 @@
   <data name="large_inv_misc_ammo_bullet_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_inv_misc_ammo_bullet_06.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="small_ability_druid_improvedtreeform" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_ability_druid_improvedtreeform.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="large_achievement_quests_completed_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_achievement_quests_completed_06.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_ability_paladin_hammeroftherighteous" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_ability_paladin_hammeroftherighteous.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_ability_warlock_improvedsoulleech" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_ability_warlock_improvedsoulleech.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_spell_holy_searinglightpriest" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_spell_holy_searinglightpriest.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="medium_achievement_bg_captureflag_eos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\medium_achievement_bg_captureflag_eos.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,11 +166,17 @@
   <data name="large_inv_misc_bag_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_inv_misc_bag_14.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="small_spell_deathknight_classicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_spell_deathknight_classicon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="medium_inv_misc_enggizmos_26" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medium_inv_misc_enggizmos_26.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="large_inv_chest_mail_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_inv_chest_mail_11.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_spell_shaman_improvedstormstrike" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_spell_shaman_improvedstormstrike.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="large_inv_misc_head_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_inv_misc_head_02.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -175,8 +193,20 @@
   <data name="medium_inv_misc_head_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\medium_inv_misc_head_02.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="small_ability_rogue_dualweild" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_ability_rogue_dualweild.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_ability_warrior_savageblow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_ability_warrior_savageblow.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="medium_inv_misc_bag_09_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\medium_inv_misc_bag_09_green.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="large_inv_jewelcrafting_gem_37" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_inv_jewelcrafting_gem_37.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_ability_hunter_snipershot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_ability_hunter_snipershot.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="large_achievement_bg_captureflag_wsg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_achievement_bg_captureflag_wsg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,10 +229,40 @@
   <data name="large_ability_warrior_weaponmastery" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\large_ability_warrior_weaponmastery.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="small_ability_mage_frostfirebolt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_ability_mage_frostfirebolt.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="medium_spell_fire_frostresistancetotem" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medium_spell_fire_frostresistancetotem.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="medium_inv_misc_bag_09_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\medium_inv_misc_bag_09_green.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="small_achievement_character_bloodelf_female" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_bloodelf_female.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_draenei_female" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_draenei_female.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_dwarf_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_dwarf_male.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_gnome_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_gnome_male.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_human_female" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_human_female.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_nightelf_female" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_nightelf_female.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_orc_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_orc_male.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_tauren_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_tauren_male.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_troll_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_troll_male.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="small_achievement_character_undead_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_achievement_character_undead_male.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
