Added new top menu category "settings" with option to chose sql prefix insert or replace
Signed-off-by: asandru <artister.hd@gmail.com>

--- a/TrinityItemCreator/Properties/Resources.resx
+++ b/TrinityItemCreator/Properties/Resources.resx
@@ -265,6 +265,9 @@
   <data name="small_inv_misc_bandage_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\small_inv_misc_bandage_10.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="small_inv_misc_wrench_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\small_inv_misc_wrench_01.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="small_petbattle_health" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\small_petbattle_health.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
