--- a/TrinityItemCreator/Properties/Resources.resx
+++ b/TrinityItemCreator/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="ability_repair" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ability_repair.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_GAMFTdatamovement" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_GAMFTdatamovement.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="large_ability_hunter_wildquiver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\large_ability_hunter_wildquiver.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
