--- a/TrinityItemCreator/Properties/Resources.resx
+++ b/TrinityItemCreator/Properties/Resources.resx
@@ -124,9 +124,6 @@
   <data name="Copy_File_512" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Copy_File-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icon_GAMFTdatamovement" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icon_GAMFTdatamovement.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="large_ability_hunter_wildquiver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\large_ability_hunter_wildquiver.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -195,9 +192,6 @@
   </data>
   <data name="medium_achievement_bg_interruptx_flagcapture_attempts" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medium_achievement_bg_interruptx_flagcapture_attempts.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="medium_inv_misc_bag_09_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\medium_inv_misc_bag_09_green.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="medium_inv_misc_bag_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medium_inv_misc_bag_14.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -291,5 +285,8 @@
   </data>
   <data name="small_spell_shaman_improvedstormstrike" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\small_spell_shaman_improvedstormstrike.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bag_32_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bag_32_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
